# calculadora-basica

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
1.Python Calculado/: README.md  pyproject.toml
1.Python Calculado/src/calculadora/: __init__.py  __main__.py  calculadora.py  operaciones.py  web.py
1.Python Calculado/src/calculadora/static/: styles.css
1.Python Calculado/src/calculadora/templates/: index.html
1.Python Calculado/src/calculadora_basica.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
1.Python Calculado/tests/: test_calculadora.py  test_web.py
src/calculadora/: __init__.py  __main__.py  calculadora.py  operaciones.py  web.py
src/calculadora/static/: styles.css
src/calculadora/templates/: index.html
tests/: test_calculadora.py  test_web.py
