[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculadora-basica"
version = "0.1.0"
description = "Calculadora basica en Python con interfaz web Flask"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Proyecto Calculadora" }]
dependencies = ["Flask>=3.0.0"]

[project.scripts]
calculadora-web = "calculadora.web:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
